pass at watch fixing